static_resources/css/site.css
/* Check and delete styles that conflict in custom.css*/

body {
    background-color: #f5f5f5;
    overflow-y: scroll;
}

#content .btn {
	margin-top: 0;
}

.navbar {
	margin-bottom: 0;
}

.navbar-inner {
	background: none;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
	border: none;
}

.placeholder {
	color: #999;
}

.comments {
	background-color: rgb(245, 245, 245);
	border: 1px solid rgb(227, 227, 227);
}

.show-comments, .show-posts {
	text-align: center;
	display: block;
}

#jump-top {
	position: fixed;
	right: 10px;
	bottom: 10px;
	margin: 0;
	cursor: pointer;
}

#content-container {
	margin-left: 0;
}

#content-container .avatar {
	display: none;
}

#team-nav {
	word-wrap: break-word;
}

abbr.timeago {
	color: #AAA;
	display: none;
}

abbr {
	border: none!important;
	cursor: default!important;
}

.avatar-container {
	width: 60px;
	overflow: hidden;
}

#post_form input[type="submit"] {
	height: 60px;
}

.post > .media-body {
	margin-left: 60px;
}

.comment-form-container {
	-moz-border-radius: 0;
    -webkit-border-radius: 0;
	padding: 0;
	margin: 0;
	padding-bottom: 2px;
}

#content-container > .hero-unit {
    -moz-border-radius-topleft: 0;
    -webkit-border-top-left-radius: 0;
	border-left-width: 0;
	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
          box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
	min-height: 500px;
}

#left-column {
	border-width: 0;
    margin-bottom: 0;
	padding: 0;
    background-color: rgba(255,255,255,0.6);
	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
          box-shadow: 0 1px 3px rgba(0, 0, 0, 0);
}

#left-column .well {
	margin:0;
	-moz-border-radius-topright: 0;
    -webkit-border-top-right-radius: 0;
	-moz-border-radius-bottomright: 0;
    -webkit-border-bottom-right-radius: 0;
}

.comment .timeago {
	margin-right: 2px;
}

.loading-spinner {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
}

.avatar-container {
	z-index: 1;
	background-color: white;
}

.loading-spinner-container {
    position: relative;
}

.spacing-right {
	margin-right: 10px;
}

.nav-header {
	text-align: center;
    cursor: default;
}

.member-name {
	padding: 1px;
	height: 30px;
}

.members {
	line-height: 33px!important;
}

#self-identity {
	margin-right: 30px;
}

.container-fluid {
	display: inline-block;
	text-align: left;
}

.navbar-inner .container {
    max-width: 900px;
}

.navbar .avatar {
    margin-top: -5px;
	display: hide;
    padding-right: 5px;
}

.name {
	margin-left: 10px;
	font-size: 14px;
	color: #AAA;
}

.comments .name, .comments em {
	margin-left: 5px;
	font-size: 13px;
	color: #AAA;
	font-weight: normal;
	line-height: 17px;
}

.comment-avatar {
	margin-left: 2px;
	margin-top: 1px;
	margin-bottom: 2px;
}

.post, .comment, .discuss, .comment-form-container  {
	margin: 0;
	word-wrap: break-word;
}

.post {
	min-height: 60px;
}

.comments {
	margin-top: 5px;
	margin-left: 10px;
	background-color: #f5f5f5;
	border: solid 1px rgb(227, 227, 227);
	line-height: 17px;
}


.media.post {
	margin-bottom: 15px;
}

.post {
	background-color: white;
	border-top: 1px solid #EEE;
}

.post-message, .comment-message {
	word-wrap: break-word;
	line-height: 17px;
}

.post-message {
	margin-bottom: 10px;
	line-height: 17px;
	margin-left: 10px;
}

.comment-message {
	margin-left: 5px;
}

.show_comments {
	padding-top: 2px;
}

.comment-form input[type='submit'] {
	width: 65px;
	height: 21px;
	margin: 0 -70px 0 0;
}

.triangle,.triangle-border  {
	margin: auto;
	margin-top: -10px;
	width: 0;
	height: 0;
	border-style: solid;
}

.invite-users {
	display: block;
	padding-top: 3px;
	text-align: center;
}

#invites  > li {
	font-size: .9em;
}

.member-avatar {
	margin: 2px;
}

.member-avatar.pending {
	border: 1px solid black;
}

.member-avatar.accepted {
	border: 1px solid green;
}

.member-avatar.rejected {
	border: 1px solid red;
}

.remove-btn {
	margin-left: -17px;
	display: inline-block;
	width: 20px;
	height: 20px;
}


#invites li {
	position: relative;
}


.triangle {
	margin-top: -9px!important;
	border-width: 0 9px 9px 9px!important;
	border-color: transparent transparent rgb(245, 245, 245) transparent;
}

.triangle-border {
	border-width: 0 10px 10px 10px;
	margin-top: -10px;
	border-color: transparent transparent rgb(227, 227, 227) transparent;
}

.triangle.dark {
	border-color: transparent transparent rgb(235, 235, 235) transparent;
}

.media .pull-left {
	margin-right: 0;
}

.comment {
	font-size: 13px;
	padding-top: 2px;
	padding-bottom: 3px!important;
	position: relative;
}

.comment-avatar-container {
	width: 24px;
	height: 24px;
	margin-top: -1px;
}

.comment-message, .comment .name {
	padding-top: 4px;
}

.comment-form, .comment-form-container .name, .comment .timeago{
	margin-top: 2px;
}

.comment .timeago {
	margin-top: 3px;
	position: absolute;
	right: 2px;
	background-color: white;
	padding: 0 2px;
}

.comment-form {
	padding-left: 29px;
	padding-right: 75px;
}

.comment-form-container {
	border-width: 0;
}

.comments > .comment:nth-child(even), .show_comments {
   background-color: rgb(235, 235, 235);
}

.show_comments {
	display: block;
}

.comments .comment:first-child {
   padding-top: 2px;
}

.comment-box {
	margin: 0 5px 0 0!important;
}

.comment-form input[type="text"] {
	min-height: 21px!important;
	max-height: 17px!important;
	padding: 2px!important;
}

#post_form {
	padding-left: 89px;
	padding-right: 84px;
}

.comment-form-container input {
	font-size: 13px;
	padding: 0 3px;
	max-height: 23px;
}

#footer {
	font-size: 9pt;
	padding: 0 3px;
	color: #AAA;
}

#post_form img {
	margin-left: -70px;
}

#post_form input[type='submit'] {
	margin-right: -65px;
}

#post_form {
	overflow: hidden;
}

textarea {
	height: 60px;
    resize: none;
	margin: 0;
	-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

.hero-unit {
	text-align: left;
	margin-bottom: 0;
    padding: 9px 19px 9px;
    border: 1px solid #e5e5e5;
    -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
            border-radius: 5px;
    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
       -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
            box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
    font-size: 14px;
	background-color: rgba(255,255,255,0.6);
	padding-top: 15px;
}

.container-frontpage .hero-unit {
    padding: 30px 40px 30px;
}

ul.errorlist {
	margin: 0;
	padding: 0 0 0 15px;
	list-style: none;
}

.container-narrow {
    margin: 0 auto;
    max-width: 940px;
}

.modal form {
	margin: 0;
}

.validity {
	margin-left: 10px;
	font-weight: bold;
}

.validity .valid-email {
    color: green;
}

.validity .invalid-email {
	color: red;
}

.people-list input {
	margin-bottom: 0;
}

.people-list .person-email {
	margin-bottom: 10px;
}

.container-frontpage {
    max-width: 800px;
    margin: 0 auto;
}

